# mipt-db-hw-4

./: .gitignore  Makefile  README.md  hw4.ipynb  pyproject.toml
